# discover-projects

./: .gitignore  LICENSE  README.md
ames-housing/: Ames_Getting_Started_v1.ipynb  Neighborhood names.xlsx  README.md  exercise-7-shap.ipynb  getting_started.ipynb  homlr-chapter-15-stacked-models.ipynb  homlr-chapter-4-linear-regression.ipynb  house-prices-advanced-regression-techniques-publicleaderboard.csv  pyproject.toml  requirements.txt
bank-churn-modelling/: README.md
caravan-insurance-sales/: README.md  caravan-test.csv  caravan-test.parquet  caravan-train.csv  caravan-train.parquet  prepare-dataset.ipynb
credit-card-fraud/: README.md  r-example-credit-fraud.ipynb
ibm-hr-analytics/: README.md
infrared-thermography/: FLIR_group1.csv  FLIR_group2.csv  FLIR_groups1and2.csv  ICI_group1.csv  ICI_group2.csv  ICI_groups1and2.csv  README.md  SHA256SUMS.txt
malware-detection/: README.md
neo-bank-churn-prediction/: README.md
otto-group-product-classification/: README.md  train.parquet
ozone-level-detection/: README.md  compare-one-and-eight-hour-data.ipynb
palmer-penguins/: README.md
pima-indians-diabetes/: README.md  r-example-ames-housing.ipynb  r-example-diabetes.ipynb
tutorial-crisp-in-a-day/: CRISP in One Day - Housing Data.flow
tutorial-end-to-end-ml/: crisp-in-one-day.ipynb  my_model.pkl  tutorial-end-to-end-ml.ipynb
uci-heart-disease/: README.md  r-example-heart-disease.ipynb
uci-secom/: README.md
