[project]
name = "ames-housing"
version = "0.0.2"
description = "These packages are used in the Ames Housing case of 'Introduction Data & AI' in addition to Python 3.12.13"
requires-python = ">=3.12,<3.13"

dependencies = [
    # For reference, see: https://pypi.org/project/

    # Math functions and data wrangling.
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",

    # Machine Learning
    "scikit-learn>=1.8.0",
    "kneed>=0.8.5",

    # Visualization
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "altair>=6.0.0",
    "plotly>=6.6.0",

    # Interpretable Machine Learning
    "shap>=0.51.0",

    # To run Jupyter Widgets and to show 3D scatter in Jupyter Notebooks.
    # To run Jupyter Notebooks and Python code in interactive mode in VS Code.
    # This meta-package installs ipywidgets, ipywidgets and nbformat, among
    # others.
    "jupyter>=1.1.1",

    # To work with reactive Python notebooks that are reproducible, 
    # git-friendly, and deployable as scripts or apps.
    "marimo>=0.20.4",

    # Calculate UMAP embedding
    "umap-learn>=0.5.11",

    # Read/write Word, PowerPoint, and Excel files:
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "xlwings>=0.33.21",
    "fastexcel>=0.19.0",

    # Print stuff to the console.
    "icecream>=2.1.10",

    # Run InterpretML (GAM).
    # https://github.com/interpretml/interpret/
    # https://interpret.ml
    #"interpret==0.7.6",

    # The following packages are needed to run the Jupyter Notebooks in the
    # folder 'gen_ai\' in the folder 'pieterov\'. These notebooks demonstrate
    # using Open AI's API to connect and use their LLMs. Fow now, I commented
    # out the packages since they not needed for the Ames Housing project. In
    # case you want to exercise with the 'gen_ai' notebooks, turn them back on.

    # Load environment variables from a .env file.
    "python-dotenv>=1.2.2",

    # Interacting with OpenAI API.
    "openai>=2.26.0",

    # Read PDF files:
    "pymupdf4llm>=1.27.2.1",
    "pdfplumber>=0.11.9",

    # Obtain closest neighbors.
    # This package is used in RAG. Though, installation did not run smoothly
    # with everyone, so I turn it off. So participants can turn if back on
    # in case they want to experiment with RAG.
    #"annoy>=1.17.3",

    # Tokenize text.
    "tiktoken>=0.12.0",
]
